ADD_EXECUTABLE(ComplexPlanet complexplanet.cpp)
SET_PROPERTY(TARGET ComplexPlanet PROPERTY CXX_STANDARD 17)
TARGET_LINK_LIBRARIES(ComplexPlanet PRIVATE Noise Noise.Util)

ADD_EXECUTABLE(TextureGranite texturegranite.cpp)
SET_PROPERTY(TARGET ComplexPlanet PROPERTY CXX_STANDARD 17)
TARGET_LINK_LIBRARIES(TextureGranite PRIVATE Noise Noise.Util)

ADD_EXECUTABLE(TextureJade texturejade.cpp)
SET_PROPERTY(TARGET TextureJade PROPERTY CXX_STANDARD 17)
TARGET_LINK_LIBRARIES(TextureJade PRIVATE Noise Noise.Util)

ADD_EXECUTABLE(TextureSky texturesky.cpp)
SET_PROPERTY(TARGET TextureSky PROPERTY CXX_STANDARD 17)
TARGET_LINK_LIBRARIES(TextureSky PRIVATE Noise Noise.Util)

ADD_EXECUTABLE(TextureSlime textureslime.cpp)
SET_PROPERTY(TARGET TextureSlime PROPERTY CXX_STANDARD 17)
TARGET_LINK_LIBRARIES(TextureSlime PRIVATE Noise Noise.Util)

ADD_EXECUTABLE(TextureWood texturewood.cpp)
SET_PROPERTY(TARGET TextureWood PROPERTY CXX_STANDARD 17)
TARGET_LINK_LIBRARIES(TextureWood PRIVATE Noise Noise.Util)

ADD_EXECUTABLE(Worms worms.cpp)
SET_PROPERTY(TARGET Worms PROPERTY CXX_STANDARD 17)
TARGET_LINK_LIBRARIES(Worms PRIVATE Noise Noise.Util)